zscore implementation, fixing statistics, AIC/BIC, fix names, code cleanup, stitching along row,